# MangalibDownloaderUtility

./: .gitignore  .gitmodules  CMakeLists.txt  Error.h  MangaCollection.cpp  MangaCollection.h  MangaDownloader.cpp  MangaDownloader.h  MangalibSession.cpp  MangalibSession.h  README.md  UriParser.h  main.cpp
Combiners/: CombinerBase.h  HtmlCombiner.cpp  HtmlCombiner.h  RawImageCombiner.cpp  RawImageCombiner.h  Utils.cpp  Utils.h
openssl-3/x64/lib/: libcrypto.lib
openssl-3/x86/lib/: libcrypto.lib
